# fxts_multi_rate

./: CBF.m  FTOCP.m  README.md  phi_plot_fig.fig  sysDyn_lin.m
Matlab_code/: FTOCP.m  README.md  install_MPT3.m  main.m  plotResults3d.m
ambercortex_ros/: CMakeLists.txt  readme.md
ambercortex_ros/include/: common.h  relay.h
ambercortex_ros/msg/: cmd.msg  ctrl_info.msg  input.msg  sensor.msg
ambercortex_ros/scripts/: jailhouse.sh
ambercortex_ros/src/: parse_log.cpp  relay.cpp  ros_node.cpp  teleop_joy.cpp
ambercortex_ros/srv/: logging.srv
multirate-mpc-cbf/: CMakeLists.txt  simple.script
multirate-mpc-cbf/ambercortex_ros/: CTestTestfile.cmake  Makefile  cmake_install.cmake
multirate-mpc-cbf/ambercortex_ros/catkin_generated/: ambercortex_ros-msg-extras.cmake.develspace.in  package.cmake  (+2 more)
multirate-mpc-cbf/atomic_configure/: setup.sh
multirate-mpc-cbf/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
multirate-mpc-cbf/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
multirate-mpc-cbf/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
multirate-mpc-cbf/segway_sim/: CTestTestfile.cmake  Makefile  cmake_install.cmake
segway_sim/: CMakeLists.txt
segway_sim/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
segway_sim/launch/: main.launch
segway_sim/plotUtils/: Vandh.py  readBag.py  readNewBag.py
segway_sim/rviz/: newPointOfView.rviz
segway_sim/src/: low_level_node.cpp  low_level_node_mine.cpp  momdp_node.py
(+35 files in other folders)
